--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/passport": "^10",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^5.1",
         "uxweb/sweet-alert": "^2.0",
         "yoeunes/toastr": "^2.0"
