--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "laravel/passport": "^10",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "^3.1",
-        "psr/simple-cache": "^1.0",
         "realrashid/sweet-alert": "^5.1",
         "uxweb/sweet-alert": "^2.0",
         "yoeunes/toastr": "^2.0"
